--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=400&q=80" alt="Photo de profil" class="profile-img animate-fadeIn">
+                    <img src="myphoto.jpeg" alt="Photo de profil" class="profile-img animate-fadeIn">
                 </div>
             </div>
         </div>
