--- a/index.html
+++ b/index.html
@@ -644,9 +644,9 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="report-item">
-                        <h4>Certification PIX</h4>
-                        <p class="text-muted">2024-2025 - Lycée Aristide Briand</p>
-                        <p>Compte rendu de préparation et de réussite à la certification PIX en compétences numériques.</p>
+                        <h4>BTS SIO</h4>
+                        <p class="text-muted">2025-2027</p>
+                        <p>Comptes rendus de TP.</p>
                         <a href="#" class="btn btn-sm btn-primary">Lire le compte rendu</a>
                     </div>
                 </div>
@@ -798,3 +798,4 @@
         document.addEventListener('DOMContentLoaded', function() {
             var typed = new Typed('.typed-text', {
                 strings: ["motivé", "curieux", "adaptable", "créatif",
+
