--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                         <h4>BTS SIO</h4>
                         <p class="text-muted">2025-2027</p>
                         <p>Comptes rendus de TP.</p>
-                        <a href="#" class="btn btn-sm btn-primary">Lire le compte rendu</a>
+                        <a href="indexp2.html" class="btn btn-sm btn-primary">Lire le compte rendu</a>
                     </div>
                 </div>
             </div>
