--- a/indexp2.html
+++ b/indexp2.html
@@ -29,8 +29,9 @@
                     <div class="report-item">
                         <h4>BTS SIO</h4>
                         <p>Comptes rendus de TP.</p>
-                        <a href="Compte rendu de TP - Algorithme.docx" class="btn btn-sm btn-primary">Compte rendu Algorithme</a>
+                        <a href="Compte rendu de TP - Algorithme.pdf" class="btn btn-sm btn-primary">Compte rendu Algorithme</a>
                         <a href="#" class="btn btn-sm btn-primary">Compte rendu Portfolio</a>
                     </div>
         </div>
 </body>
+
