--- a/indexp2.html
+++ b/indexp2.html
@@ -29,8 +29,9 @@
                     <div class="report-item">
                         <h4>BTS SIO</h4>
                         <p>Comptes rendus de TP.</p>
-                        <a href="Compte rendu de TP - Algorithme.pdf" class="btn btn-sm btn-primary">Compte rendu Algorithme</a>
-                        <a href="#" class="btn btn-sm btn-primary">Compte rendu Portfolio</a>
+                        <a href="Compte rendu de TP - Algorithme (1).pdf" class="btn btn-sm btn-primary">Compte rendu TP Algorithme</a>
+                        <a href="Compte Rendu TP Portfolio.pdf" class="btn btn-sm btn-primary">Compte rendu TP Portfolio</a>
+                        <a href="Compte rendu TP - Présentation et paramétrage du matériel informatique.pdf" class="btn btn-sm btn-primary">Compte rendu TP Présentation et paramétrage du matériel informatique</a>
                     </div>
         </div>
 </body>
