--- a/indexp2.html
+++ b/indexp2.html
@@ -30,9 +30,10 @@
                         <h4>BTS SIO</h4>
                         <p>Comptes rendus de TP.</p>
                         <a href="Compte rendu de TP - Algorithme (1).pdf" class="btn btn-sm btn-primary">Compte rendu TP Algorithme</a>
-                        <a href="Compte Rendu TP Portfolio.pdf" class="btn btn-sm btn-primary">Compte rendu TP Portfolio</a>
+                        <a href="Compte Rendu TP Portfolio.pdf" class="btn btn-sm btn-primary">Compte rendu TP Portfolio</a><br>
                         <a href="Compte rendu TP - Présentation et paramétrage du matériel informatique.pdf" class="btn btn-sm btn-primary">Compte rendu TP Présentation et paramétrage du matériel informatique</a>
                     </div>
         </div>
 </body>
+
 
