--- a/indexp2.html
+++ b/indexp2.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -34,7 +32,9 @@
                         <a href="Compte rendu de TP - Algorithme (1).pdf" class="btn btn-sm btn-primary">Compte rendu TP Algorithme</a>
                         <a href="Compte Rendu TP Portfolio.pdf" class="btn btn-sm btn-primary">Compte rendu TP Portfolio</a><br>
                         <a href="Compte rendu TP - Présentation et paramétrage du matériel informatique.pdf" class="btn btn-sm btn-primary">Compte rendu TP Présentation et paramétrage du matériel informatique</a>
-                        <a href="JAVA.pdf">Compte rendu TP JAVA</a>
+                        <a href="JAVA.pdf" class="btn btn-sm btn-primary">Compte rendu TP JAVA</a>
                     </div>
         </div>
 </body>
+
+
