--- a/indexp2.html
+++ b/indexp2.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -33,6 +35,7 @@
                         <a href="Compte Rendu TP Portfolio.pdf" class="btn btn-sm btn-primary">Compte rendu TP Portfolio</a><br>
                         <a href="Compte rendu TP - Présentation et paramétrage du matériel informatique.pdf" class="btn btn-sm btn-primary">Compte rendu TP Présentation et paramétrage du matériel informatique</a>
                         <a href="JAVA.pdf" class="btn btn-sm btn-primary">Compte rendu TP JAVA</a>
+                        <a href="DL2.pdf" class="btn btn-sm btn-primary">Compte rendu TP Les logiciels diagnostics</a><br>
                     </div>
         </div>
 </body>
