--- a/indexp2.html
+++ b/indexp2.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -34,10 +32,12 @@
                         <a href="Compte rendu de TP - Algorithme (1).pdf" class="btn btn-sm btn-primary">Compte rendu TP Algorithme</a>
                         <a href="Compte Rendu TP Portfolio.pdf" class="btn btn-sm btn-primary">Compte rendu TP Portfolio</a><br>
                         <a href="Compte rendu TP - Présentation et paramétrage du matériel informatique.pdf" class="btn btn-sm btn-primary">Compte rendu TP Présentation et paramétrage du matériel informatique</a>
-                        <a href="JAVA.pdf" class="btn btn-sm btn-primary">Compte rendu TP JAVA</a>
+                        <a href="JAVA.pdf" class="btn btn-sm btn-primary">Compte rendu TP JAVA</a><br>
                         <a href="DL2.pdf" class="btn btn-sm btn-primary">Compte rendu TP Les logiciels diagnostics</a><br>
+                        <a href="Création d'une documentation.pdf" class="btn btn-sm btn-primary">Compte rendu TP Création d'une documentation avec captures d'écran</a><br>
+                        <a href="Fiches Tuto HTML.pdf" class="btn btn-sm btn-primary">Compte rendu TP Fiche Tuto HTML</a><br>
+
                     </div>
         </div>
 </body>
-
 
