--- a/indexp2.html
+++ b/indexp2.html
@@ -25,19 +25,25 @@
     </style>
 </head>
 <body>
-        <div class="col-md-6 mb-4">
+<div class="col-md-6 mb-4">
                     <div class="report-item">
-                        <h4>BTS SIO</h4>
-                        <p>Comptes rendus de TP.</p>
-                        <a href="Compte rendu de TP - Algorithme (1).pdf" class="btn btn-sm btn-primary">Compte rendu TP Algorithme</a>
-                        <a href="Compte Rendu TP Portfolio.pdf" class="btn btn-sm btn-primary">Compte rendu TP Portfolio</a><br>
-                        <a href="Compte rendu TP - Présentation et paramétrage du matériel informatique.pdf" class="btn btn-sm btn-primary">Compte rendu TP Présentation et paramétrage du matériel informatique</a>
-                        <a href="JAVA.pdf" class="btn btn-sm btn-primary">Compte rendu TP JAVA</a><br>
-                        <a href="DL2.pdf" class="btn btn-sm btn-primary">Compte rendu TP Les logiciels diagnostics</a><br>
-                        <a href="Création d'une documentation.pdf" class="btn btn-sm btn-primary">Compte rendu TP Création d'une documentation avec captures d'écran</a><br>
-                        <a href="Fiches Tuto HTML.pdf" class="btn btn-sm btn-primary">Compte rendu TP Fiche Tuto HTML</a><br>
-
+                        <h4>Comptes Rendus de Mme.Beauvallet</h4>
+                        <p class="text-muted">2025-2027</p>
+                        <a href="indexp3.html" class="btn btn-sm btn-primary">Lire le compte rendu</a>
                     </div>
-        </div>
+                </div>
+
+<div class="col-md-6 mb-4">
+                    <div class="report-item">
+                        <h4>Comptes Rendus de M.Sotoca</h4>
+                        <p class="text-muted">2025-2027</p>
+                        <a href="indexp4.html" class="btn btn-sm btn-primary">Lire le compte rendu</a>
+                    </div>
+                </div>
+
 </body>
+
+
+        
+
 
