--- a/indexp3.html
+++ b/indexp3.html
@@ -33,7 +33,8 @@
                         <a href="Compte Rendu TP Portfolio.pdf" class="btn btn-sm btn-primary">Compte rendu TP Portfolio</a><br>
                         <a href="JAVA.pdf" class="btn btn-sm btn-primary">Compte rendu TP JAVA</a><br>
                         <a href="Fiches Tuto HTML.pdf" class="btn btn-sm btn-primary">Compte rendu TP Fiche Tuto HTML</a><br>
-                        
+                        <a href="moncv.html" class="btn btn-sm btn-primary">Mon CV HTML</a><br>
+
 </body>
 
 
