--- a/indexp3.html
+++ b/indexp3.html
@@ -29,13 +29,16 @@
                     <div class="report-item">
                         <h4>BTS SIO</h4>
                         <h2>Comptes rendus de TP.</h2>
-                        <a href="Compte rendu de TP - Algorithme (1).pdf" class="btn btn-sm btn-primary">Compte rendu TP Algorithme</a>
+                        <a href="Compte rendu de TP - Algorithme (1).pdf" class="btn btn-sm btn-primary">Compte rendu TP Algorithme</a><br>
                         <a href="Compte Rendu TP Portfolio.pdf" class="btn btn-sm btn-primary">Compte rendu TP Portfolio</a><br>
                         <a href="JAVA.pdf" class="btn btn-sm btn-primary">Compte rendu TP JAVA</a><br>
                         <a href="Fiches Tuto HTML.pdf" class="btn btn-sm btn-primary">Compte rendu TP Fiche Tuto HTML</a><br>
                         <a href="moncv.html" class="btn btn-sm btn-primary">Mon CV HTML</a><br>
+                        <a href="TP Java 03.pdf" class="btn btn-sm btn-primary">TP Java 03</a><br>
+
 
 </body>
 
 
         
+
