--- a/indexp3.html
+++ b/indexp3.html
@@ -1,4 +1,3 @@
-        
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -37,10 +36,11 @@
                         <a href="moncv.html" class="btn btn-sm btn-primary">Mon CV HTML</a><br>
                         <a href="TP Java 03.pdf" class="btn btn-sm btn-primary">TP Java 03</a><br>
                         <a href="CSS.pdf" class="btn btn-sm btn-primary">TP CSS</a><br>
-                        <a href="TP HTML et CSS" class="btn btn-sm btn-primary">TP HTML et CSS avancés</a><br>
+                        <a href="TP HTML-CSS-A.pdf" class="btn btn-sm btn-primary">TP HTML et CSS avancés</a><br>
 
 
 </body>
+
 
 
 
