--- a/indexp3.html
+++ b/indexp3.html
@@ -38,11 +38,10 @@
                         <a href="CSS.pdf" class="btn btn-sm btn-primary">TP CSS</a><br><br>
                         <a href="TP HTML-CSS-A.pdf" class="btn btn-sm btn-primary">TP HTML et CSS avancés</a><br><br>
                         <a href="TP 1 Cybersécurité.pdf" class="btn btn-sm btn-primary">TP1 Cybersécurité</a><br><br>
-                        <a href="TP 4 Shifumi .pdf" class="btn btn-sm btn-primary">TP Shifumi</a><br><br>
+                        <a href="HC part2 .pdf" class="btn btn-sm btn-primary">TP HTML et CSS avancé (partie 2)</a><br><br>
 
 
 </body>
-
 
 
 
