--- a/indexp4.html
+++ b/indexp4.html
@@ -29,9 +29,11 @@
                     <div class="report-item">
                         <h4>BTS SIO</h4>
                         <h2>Comptes rendus de TP.</h2>
-                         <a href="Compte rendu TP - Présentation et paramétrage du matériel informatique.pdf" class="btn btn-sm btn-primary">Compte rendu TP Présentation et paramétrage du matériel informatique</a>
-                         <a href="DL2.pdf" class="btn btn-sm btn-primary">Compte rendu TP Les logiciels diagnostics</a><br>
-                         <a href="Création d'une documentation.pdf" class="btn btn-sm btn-primary">Compte rendu TP Création d'une documentation avec captures d'écran</a><br>
+                         <a href="Compte rendu TP - Présentation et paramétrage du matériel informatique.pdf" class="btn btn-sm btn-primary">Compte rendu TP Présentation et paramétrage du matériel informatique</a><br><br>
+                         <a href="DL2.pdf" class="btn btn-sm btn-primary">Compte rendu TP Les logiciels diagnostics</a><br><br>
+                         <a href="Création d'une documentation.pdf" class="btn btn-sm btn-primary">Compte rendu TP Création d'une documentation avec captures d'écran</a><br><br>
+                         <a href="NAS.pdf" class="btn btn-sm btn-primary">TP Le serveur NAS</a><br><br>
+                         
                         
 </body>
 
