--- a/indexp3.html
+++ b/indexp3.html
@@ -39,9 +39,12 @@
                         <a href="TP HTML-CSS-A.pdf" class="btn btn-sm btn-primary">TP HTML et CSS avancés</a><br><br>
                         <a href="TP 1 Cybersécurité.pdf" class="btn btn-sm btn-primary">TP1 Cybersécurité</a><br><br>
                         <a href="HC part2 .pdf" class="btn btn-sm btn-primary">TP HTML et CSS avancé (partie 2)</a><br><br>
+                        <a href="TP PIA.pdf" class="btn btn-sm btn-primary">TP  Cybersécurité (PIA)</a><br><br>
 
 
 </body>
+
+
 
 
 
