--- a/indexp3.html
+++ b/indexp3.html
@@ -40,9 +40,11 @@
                         <a href="TP 1 Cybersécurité.pdf" class="btn btn-sm btn-primary">TP1 Cybersécurité</a><br><br>
                         <a href="HC part2 .pdf" class="btn btn-sm btn-primary">TP HTML et CSS avancé (partie 2)</a><br><br>
                         <a href="TP PIA.pdf" class="btn btn-sm btn-primary">TP  Cybersécurité (PIA)</a><br><br>
+                        <a href="TP PIA (partie 2).pdf" class="btn btn-sm btn-primary">TP  Cybersécurité (PIA partie 2)</a><br><br>
 
 
 </body>
+
 
 
 
