--- a/indexp3.html
+++ b/indexp3.html
@@ -38,12 +38,14 @@
                         <a href="CSS.pdf" class="btn btn-sm btn-primary">TP CSS</a><br><br>
                         <a href="TP HTML-CSS-A.pdf" class="btn btn-sm btn-primary">TP HTML et CSS avancés</a><br><br>
                         <a href="TP 1 Cybersécurité.pdf" class="btn btn-sm btn-primary">TP1 Cybersécurité</a><br><br>
-                        <a href="HC part2 .pdf" class="btn btn-sm btn-primary">TP HTML et CSS avancé (partie 2)</a><br><br>
+                        <a href="HC part2 .pdf" class="btn btn-sm btn-primary">TP HTML et CSS avancé (partie 2)</a><br><br><a href="index htmlcss.html" class="btn btn-sm btn-primary">index html</a><a href="styleinit.css" class="btn btn-sm btn-primary">fichier CSS</a>
                         <a href="TP PIA.pdf" class="btn btn-sm btn-primary">TP  Cybersécurité (PIA)</a><br><br>
                         <a href="TP PIA (partie 2).pdf" class="btn btn-sm btn-primary">TP  Cybersécurité (PIA partie 2)</a><br><br>
 
 
+
 </body>
+
 
 
 
