--- a/indexp3.html
+++ b/indexp3.html
@@ -29,22 +29,16 @@
                     <div class="report-item">
                         <h4>BTS SIO</h4>
                         <h2>Comptes rendus de TP.</h2>
-                        <a href="Compte rendu de TP - Algorithme (1).pdf" class="btn btn-sm btn-primary">Compte rendu TP Algorithme</a><br><br>
-                        <a href="Compte Rendu TP Portfolio.pdf" class="btn btn-sm btn-primary">Compte rendu TP Portfolio</a><br><br>
-                        <a href="JAVA.pdf" class="btn btn-sm btn-primary">Compte rendu TP JAVA</a><br><br>
-                        <a href="Fiches Tuto HTML.pdf" class="btn btn-sm btn-primary">Compte rendu TP Fiche Tuto HTML</a><br><br>
-                        <a href="moncv.html" class="btn btn-sm btn-primary">Mon CV HTML</a><br><br>
-                        <a href="TP Java 03.pdf" class="btn btn-sm btn-primary">TP Java 03</a><br><br>
-                        <a href="CSS.pdf" class="btn btn-sm btn-primary">TP CSS</a><br><br>
-                        <a href="TP HTML-CSS-A.pdf" class="btn btn-sm btn-primary">TP HTML et CSS avancés</a><br><br>
-                        <a href="TP 1 Cybersécurité.pdf" class="btn btn-sm btn-primary">TP1 Cybersécurité</a><br><br>
-                        <a href="HC part2 .pdf" class="btn btn-sm btn-primary">TP HTML et CSS avancé (partie 2)</a><a href="index htmlcss.html" class="btn btn-sm btn-primary">index html</a><a href="styleinit.css" class="btn btn-sm btn-primary">fichier CSS</a><br><br>
-                        <a href="TP PIA.pdf" class="btn btn-sm btn-primary">TP  Cybersécurité (PIA)</a><br><br>
-                        <a href="TP PIA (partie 2).pdf" class="btn btn-sm btn-primary">TP  Cybersécurité (PIA partie 2)</a><br><br>
-
-
-
+                         <a href="Compte rendu TP - Présentation et paramétrage du matériel informatique.pdf" class="btn btn-sm btn-primary">Compte rendu TP Présentation et paramétrage du matériel informatique</a><br><br>
+                         <a href="DL2.pdf" class="btn btn-sm btn-primary">Compte rendu TP Les logiciels diagnostics</a><br><br>
+                         <a href="Création d'une documentation.pdf" class="btn btn-sm btn-primary">Compte rendu TP Création d'une documentation avec captures d'écran</a><br><br>
+                         <a href="NAS.pdf" class="btn btn-sm btn-primary">TP Le serveur NAS</a><br><br>
+                         <a href="_ _AMEX _ 40 Questions .pdf" class="btn btn-sm btn-primary"> TP TechCorp</a><br><br>
+                         <a href="TP cyber 5.pdf" class="btn btn-sm btn-primary">TP Cybersécurité</a><br><br>
+                         
+                        
 </body>
+
 
 
 
