--- a/indexp3.html
+++ b/indexp3.html
@@ -42,10 +42,12 @@
                         <a href="TP PIA.pdf" class="btn btn-sm btn-primary">TP  Cybersécurité (PIA)</a><br><br>
                         <a href="TP PIA (partie 2).pdf" class="btn btn-sm btn-primary">TP  Cybersécurité (PIA partie 2)</a><br><br>
                         <a href="TP5 java algo.pdf" class="btn btn-sm btn-primary">TP5 JAVA (Partie 1 et 2)</a><br><br>
-
+                        <a href="procedure.pdf" class="btn btn-sm btn-primary">TP6 Fonction et Procédure</a><br><br>
 
 
 </body>
+
+
 
 
 
