--- a/indexp3.html
+++ b/indexp3.html
@@ -43,6 +43,8 @@
                         <a href="TP PIA (partie 2).pdf" class="btn btn-sm btn-primary">TP  Cybersécurité (PIA partie 2)</a><br><br>
                         <a href="TP5 java algo.pdf" class="btn btn-sm btn-primary">TP5 JAVA (Partie 1 et 2)</a><br><br>
                         <a href="procedure.pdf" class="btn btn-sm btn-primary">TP6 Fonction et Procédure</a><br><br>
+                        <a href="les formulaires.pdf" class="btn btn-sm btn-primary">TP Les Formulaires</a><br><br>
+                        <a href="TP Responsive Design.pdf" class="btn btn-sm btn-primary">TP Responsive Design</a><br><br>
 
 
 </body>
