--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
         // Initialisation de Typed.js pour l'effet d'écriture
         document.addEventListener('DOMContentLoaded', function() {
             var typed = new Typed('.typed-text', {
-                strings: ["motivé", "curieux", "adaptable", "créatif"],
+                strings: ["motivée", "curieuse", "adaptable", "créative"],
                 typeSpeed: 50,
                 backSpeed: 30,
                 backDelay: 2000,
@@ -739,5 +739,4 @@
     </script>
 </body>
 </html>
-
 
