--- a/indexp3.html
+++ b/indexp3.html
@@ -130,12 +130,14 @@
                     <a href="procedure.pdf" class="btn btn-sm btn-primary">TP6 Fonction et Procédure</a><br>
                     <a href="les formulaires.pdf" class="btn btn-sm btn-primary">TP Les Formulaires</a><br>
                     <a href="TP Responsive Design.pdf" class="btn btn-sm btn-primary">TP Responsive Design</a>
+                    <a href="Veille techno.pdf" class="btn btn-sm btn-primary">T2- Chapitre 3 - TD1</a>
                 </div>
             </div>
         </div>
     </div>
 </body>
 </html>
+        
 
 
 
