--- a/indexp3.html
+++ b/indexp3.html
@@ -129,8 +129,8 @@
                     <a href="TP5 java algo.pdf" class="btn btn-sm btn-primary">TP5 JAVA (Partie 1 et 2)</a><br>
                     <a href="procedure.pdf" class="btn btn-sm btn-primary">TP6 Fonction et Procédure</a><br>
                     <a href="les formulaires.pdf" class="btn btn-sm btn-primary">TP Les Formulaires</a><br>
-                    <a href="TP Responsive Design.pdf" class="btn btn-sm btn-primary">TP Responsive Design</a>
-                    <a href="Veille techno.pdf" class="btn btn-sm btn-primary">T2- Chapitre 3 - TD1</a>
+                    <a href="TP Responsive Design.pdf" class="btn btn-sm btn-primary">TP Responsive Design</a><br>
+                    <a href="Veille techno.pdf" class="btn btn-sm btn-primary">T2- Chapitre 3 - TD1</a><br>
                 </div>
             </div>
         </div>
@@ -138,6 +138,7 @@
 </body>
 </html>
         
+
 
 
 
