--- a/indexp3.html
+++ b/indexp3.html
@@ -131,6 +131,7 @@
                     <a href="les formulaires.pdf" class="btn btn-sm btn-primary">TP Les Formulaires</a><br>
                     <a href="TP Responsive Design.pdf" class="btn btn-sm btn-primary">TP Responsive Design</a><br>
                     <a href="Veille techno.pdf" class="btn btn-sm btn-primary">T2- Chapitre 3 - TD1</a><br>
+                    <a href="La Bataille Navale.pdf" class="btn btn-sm btn-primary">TP Bataille Navale</a><br>
                 </div>
             </div>
         </div>
@@ -138,9 +139,6 @@
 </body>
 </html>
         
-
-
-
 
 
 
