--- a/indexp3.html
+++ b/indexp3.html
@@ -132,17 +132,13 @@
                     <a href="TP Responsive Design.pdf" class="btn btn-sm btn-primary">TP Responsive Design</a><br>
                     <a href="Veille techno.pdf" class="btn btn-sm btn-primary">T2- Chapitre 3 - TD1</a><br>
                     <a href="La Bataille Navale.pdf" class="btn btn-sm btn-primary">TP Bataille Navale</a><br>
+                    <a href="procedure livre .pdf" class="btn btn-sm btn-primary">TP Les Classes</a><br>
                 </div>
             </div>
         </div>
     </div>
 </body>
 </html>
-        
-
-
-
-
 
 
 
