--- a/index.html
+++ b/index.html
@@ -593,8 +593,8 @@
                         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=300&q=80" class="project-img" alt="Veille Technologique">
                         <div class="project-content">
                             <h2>Veille Technologique</h2>
-                            <h5>LE METAVERSE</h5>
-                            <p>Réalisation d'une veille technologique sur le metaverse.</p>
+                            <h5>L'Intelligence Artificielle Dans Le Domaine Médical</h5>
+                            <p>Réalisation d'une veille technologique sur l'Intelligence Artificielle dans le domaine médical</p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal2">Voir plus</button>
                         </div>
                     </div>
@@ -714,9 +714,9 @@
                 </div>
                 <div class="modal-body">
                     <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=300&q=80" class="img-fluid mb-4 rounded" alt="Veille Technologique">
-                    <p>Réalisation d'une veille technologique complète sur le métaverse, explorant les dernières innovations, tendances et développements dans cet écosystème en constante évolution.</p>
+                    <p>Réalisation d'une veille technologique complète sur l' IA dans le domaine médical, explorant les dernières innovations, tendances et développements dans cet écosystème en constante évolution.</p>
                     <p><strong>Veille Technologique</strong></p>
-                    <p><strong><a href="veille.html" class="btn btn-primary">Accéder à la veille technologique sur le Metaverse</a></strong></p>
+                    <p><strong><a href="veille.html" class="btn btn-primary">Accéder à la veille technologique sur l'IA dans le domaine du médicalS</a></strong></p>
                 </div>
             </div>
         </div>
