--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
                     <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=300&q=80" class="img-fluid mb-4 rounded" alt="Veille Technologique">
                     <p>Réalisation d'une veille technologique complète sur l' IA dans le domaine médical, explorant les dernières innovations, tendances et développements dans cet écosystème en constante évolution.</p>
                     <p><strong>Veille Technologique</strong></p>
-                    <p><strong><a href="veille.html" class="btn btn-primary">Accéder à la veille technologique sur l'IA dans le domaine du médicalS</a></strong></p>
+                    <p><strong><a href="veille.html" class="btn btn-primary">Accéder à la veille technologique sur l'IA dans le domaine du médical</a></strong></p>
                 </div>
             </div>
         </div>
@@ -739,4 +739,5 @@
     </script>
 </body>
 </html>
+
 
