Restore and format indexp3.html content

--- a/indexp3.html
+++ b/indexp3.html
@@ -133,15 +133,15 @@
                     <a href="Veille techno.pdf" class="btn btn-sm btn-primary">T2- Chapitre 3 - TD1</a><br>
                     <a href="La Bataille Navale.pdf" class="btn btn-sm btn-primary">TP Bataille Navale</a><br>
                     <a href="procedure livre .pdf" class="btn btn-sm btn-primary">TP Les Classes</a><br>
+                    <a href="php.pdf" class="btn btn-sm btn-primary">TP Base de données</a><br>
+                    <a href="TP MCD et MLDR.pdf" class="btn btn-sm btn-primary">TP MCD et MLDR E.Leclerc</a><br>
+
                 </div>
             </div>
         </div>
     </div>
 </body>
 </html>
-
-
-
-
+        
 
 
