--- a/indexp3.html
+++ b/indexp3.html
@@ -135,6 +135,10 @@
                     <a href="procedure livre .pdf" class="btn btn-sm btn-primary">TP Les Classes</a><br>
                     <a href="php.pdf" class="btn btn-sm btn-primary">TP Base de données</a><br>
                     <a href="TP MCD et MLDR.pdf" class="btn btn-sm btn-primary">TP MCD et MLDR E.Leclerc</a><br>
+                    <a href="BDD lyceePL.pdf" class="btn btn-sm btn-primary">BDD lycée Paul Lapie</a> 
+                    <a href="bdd_lyceepl.sql" class="btn btn-sm btn-primary">BDD lycée Paul Lapie SQL</a>
+                    <a href="javascript (2).pdf" class="btn btn-sm btn-primary">Javascript Navigateur</a>
+                    <a href="Copie de javascript (1).pdf" class="btn btn-sm btn-primary">Javascript Navigateur (suite)</a>
 
                 </div>
             </div>
@@ -142,6 +146,3 @@
     </div>
 </body>
 </html>
-        
-
-
