Fix HTML formatting and add new links

--- a/indexp3.html
+++ b/indexp3.html
@@ -57,7 +57,7 @@
             border: none;
             padding: 10px 20px;
             border-radius: 5px;
-            transition: all 0.3s ease;
+            transition: all 0.3s ease; 
             font-weight: 500;
             margin-bottom: 10px;
             display: inline-block;
@@ -139,6 +139,7 @@
                     <a href="bdd_lyceepl.sql" class="btn btn-sm btn-primary">BDD lycée Paul Lapie SQL</a>
                     <a href="javascript (2).pdf" class="btn btn-sm btn-primary">Javascript Navigateur</a>
                     <a href="Copie de javascript (1).pdf" class="btn btn-sm btn-primary">Javascript Navigateur (suite)</a>
+                    <a href="BDD ZOO.pdf" class="btn btn-sm btn-primary">BDD ZOO</a>
 
                 </div>
             </div>
@@ -146,3 +147,4 @@
     </div>
 </body>
 </html>
+        
