--- a/indexp2.html
+++ b/indexp2.html
@@ -102,7 +102,8 @@
                 <div class="report-item">
                     <h4>Comptes Rendus de Mme.Beauvallet</h4>
                     <p class="text-muted">2025-2027</p>
-                    <a href="indexp3.html" class="btn btn-sm btn-primary">Lire le compte rendu</a>
+                    <a href="indexp3.html" class="btn btn-sm btn-primary">Lire le compte rendu - Semestre 1</a>
+                    <a href="indexp3part2.html" class="btn btn-sm btn-primary">Lire le compte rendu - Semestre 2</a>
                 </div>
             </div>
 
@@ -119,6 +120,7 @@
 </html>
 
         
+
 
 
 
