Revise indexp2.html for portfolio updates
Updated the HTML structure and content for the portfolio page, including links and styling adjustments.

--- a/indexp2.html
+++ b/indexp2.html
@@ -111,7 +111,8 @@
                 <div class="report-item">
                     <h4>Comptes Rendus de M.Sotoca</h4>
                     <p class="text-muted">2025-2027</p>
-                    <a href="indexp4.html" class="btn btn-sm btn-primary">Lire le compte rendu</a>
+                    <a href="indexp4.html" class="btn btn-sm btn-primary">Lire le compte rendu - Semestre 1</a>
+                    <a href="indexp4part2.html" class="btn btn-sm btn-primary">Lire le compte rendu - Semestre 2</a>
                 </div>
             </div>
         </div>
@@ -119,7 +120,11 @@
 </body>
 </html>
 
+        ;
+
+
         
+
 
 
 
