--- a/indexp3part2.html
+++ b/indexp3part2.html
@@ -118,7 +118,9 @@
                     <a href="Accueil.java" class="btn btn-sm btn-primary">TD2 Array List - Acceuil</a>
                     <a href="Accueil.fxml" class="btn btn-sm btn-primary">TD2 Array List - Interface graphique </a>
                     <a href="AccueilController.java" class="btn btn-sm btn-primary">TD2 Array List - Acceuil Controller</a>
-                    <a href="Chapitre 4 - TD2 - Identifier les menaces et mettre en oeuvre les défenses appropriées.pdf" class="btn btn-sm btn-primary">"Chapitre 4 - TD2 - Identifier les menaces et mettre en oeuvre les défenses appropriées.pdf</a>
+                    <a href="Chapitre 4 - TD2 - Identifier les menaces et mettre en oeuvre les défenses appropriées.pdf" class="btn btn-sm btn-primary">"Chapitre 4 - TD2 - Identifier les menaces et mettre en oeuvre les défenses appropriées</a>
+                    <a href="TH3CH4.pdf" class="btn btn-sm btn-primary">TD3 - Chapitre 4 - Machines virtuelles</a>
+
 
                     
                     
